--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
         </div>
       </div>
 
+      <!-- ----------------------------------------------------Parallax---------------------------------------------------------------------- -->
       <div class="text-white content-parallax2">
         <div class="container">
           <div class="row align-items-center">
